--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <div class="slides" id="slides">   
        <img src="interrior.jpg" alt="">
      </div>
-      <div class="slides" id="slides">             <img src="tajImage.jpg" alt=""></div>
+      <div class="slides" id="slides">             <img src="tajimage.jpg" alt=""></div>
       <div class="slides" id="slides">             <img src="DrawingRoom.jpg" alt=""></div>
       <div class="slides" id="slides">             <img src="BedRoom.jpg" alt=""></div>
       </div>
